syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Github.Models";

message GithubOrganization {
  int64 id = 1;
  string name = 2;
  string avatar_url = 3;
}