syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Github.Models";

message GithubRepository {
  int64 id = 1;
  string name = 2;
}